# joyagent

./: .gitignore
dev_md/: 0-1 coding.md  (+9 more)
joyagent/: .dockerignore  .env.example  Dockerfile  calculator.py.bak  config.env  main.py  pyproject.toml
joyagent/app/agent/: agent.py  prompt.py
joyagent/app/agent/graph/: __init__.py  edges.py  nodes.py  workflow.py
joyagent/app/agent/prompts/: __init__.py  executor.txt  planner.txt  reflector.txt
joyagent/app/agent/runtime/: __init__.py  executor.py  planner.py  reflector.py
joyagent/app/agent/schemas/: __init__.py  state.py
joyagent/app/api/: agent.py
joyagent/app/coding/: __init__.py  ast_analyzer.py  code_search.py  diff_generator.py  patch_apply.py  repository_loader.py
joyagent/app/core/: config.py
joyagent/app/memory/: __init__.py  embeddings.py  long_term.py  manager.py  reflection.py  short_term.py  summary.py  token_manager.py
joyagent/app/sandbox/: __init__.py  bad_case_analyzer.py  docker_runner.py  error_parser.py  fix_loop.py  pytest_runner.py  security.py
joyagent/app/service/: llm_service.py
joyagent/app/tools/: __init__.py  base.py  file_read.py  file_write.py  hooks.py  registry.py  remember.py  safety_hook.py  schemas.py
joyagent/app/tools/coding/: __init__.py  analyze_code.py  apply_patch.py  generate_diff.py  load_repo.py  search_code.py
joyagent/app/tools/git/: __init__.py  branch.py  commit.py  diff.py  log.py  status.py
joyagent/app/tools/shell/: __init__.py  execute.py
joyagent/sandbox_config/: Dockerfile  seccomp_profile.json
joyagent/static/: monitor.html
(+3 files in other folders)
