[project]
name = "joyagent"
version = "0.1.0"
description = "An autonomous coding agent — Anthropic-native Agent Runtime"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "fastapi>=0.138.0",
    "gitpython>=3.1.50",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.49.0",
]
